--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.2.3",
     "keycloak-angular": "^13.0.0",
     "keycloak-js": "^20.0.2",
+    "material-icons": "^1.13.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
