--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^15.0.4",
     "@angular/platform-browser-dynamic": "^15.0.4",
     "@angular/router": "^15.0.4",
+    "@microsoft/tsdoc": "^0.14.2",
     "bootstrap": "^5.2.3",
     "keycloak-angular": "^13.0.0",
     "keycloak-js": "^20.0.2",
