--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,9 @@
       "files": [
         "*.ts"
       ],
+      "plugins": [
+        "eslint-plugin-tsdoc"
+      ],
       "extends": [
         "eslint:recommended",
         "plugin:@typescript-eslint/recommended",
@@ -30,7 +33,8 @@
             "prefix": "app",
             "style": "kebab-case"
           }
-        ]
+        ],
+        "tsdoc/syntax": "warn"
       }
     },
     {
