--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,3 +29,6 @@ jobs:
     - run: npm ci
     - run: npm run lint
     - run: npm run build --if-present
+    - name: Prettier Action
+      uses: creyD/prettier_action@v4.2
+
